<resources>
    <string name="app_name">PocketSafe</string>
    <string name="hint">Ingresa tu correo</string>
    <string name="correo">Correo: </string>
    <string name="inss">Iniciar Sesión </string>
    <string name="pass">Contraseña: </string>
    <string name="ingpass">Ingresa tu contraseña</string>
    <string name="textingresar">Ingresar</string>
    <string name="textbtnregistrarse">registrarse</string>
    <string name="textnoregistrado">¿No tienes una cuenta? ¡Registrate!</string>
    <string name="textpregunta">¿Cómo te gustaría que te llamáramos?</string>
    <string name="textapodo">Escríbelo aquí</string>
    <string name="textbuttonpreferencia">Guardar Preferencia</string>
    <string name="textTitle">Por favor complete su información:</string>
    <string name="txtrut">Rut</string>
    <string name="txtname">Nombre</string>
    <string name="txtlastname">Apellido Paterno</string>
    <string name="lastnamemat">Apellido Materno</string>
    <string name="txtdate">Fecha de nacimiento</string>
    <string name="txtgen">Género</string>
    <string name="rdtextf">Femenino</string>
    <string name="rbtextm">Masculino</string>
    <string name="textadress">Dirección</string>
    <string name="hintemal">Correo electrónico</string>
    <string name="txtpass">Ingrese su contraseña</string>
    <string name="textmin">La contraseña debe tener un mínimo de 6 caracteres.</string>
    <string name="textinclude">Debe incluir números, mayúsculas y cáracteres especiales.</string>
    <string name="txtbutton">validar</string>
    <string name="textterm">Acepto los terminos y condiciones</string>
    <string name="welcome">Bienvenido!</string>
    <string name="btninses">Iniciar Sesión</string>
    <string name="btnregis">Registrarse</string>
    <string name="nameapp">PocketSave</string>
    <string name="txt">¿Qué deseas hacer?</string>
    <string name="nameappsplash">PocketSave</string>
    <string name="txtmes">RESUMEN SEPTIEMBRE 2022</string>
    <string name="txtMonto">$700.000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>